--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Request manual activation file
         id: getManualLicenseFile
         uses: game-ci/unity-request-activation-file@v2
+        with:
+      # Version of unity to use for building the project.
+         unityVersion: 2021.2.7
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
         uses: actions/upload-artifact@v2
