--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -12,7 +12,7 @@ jobs:
         uses: game-ci/unity-request-activation-file@v2
         with:
       # Version of unity to use for building the project.
-         unityVersion: 2021.2.7
+         unityVersion: 2021.2.7f1
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
         uses: actions/upload-artifact@v2
